list api fixes
